# TanoshiiEditor

./: .gitignore  CMakeLists.txt
.cache/clangd/index/: main.cpp.507F18F536486AFC.idx
include/: Application.h  Border.hpp  Buffer.h  Logger.h  StringManipulator.h  Window.h
src/: Application.cpp  BaseWindow.cpp  Buffer.cpp  Logger.cpp  TextEditWindow.cpp  Window.cpp  main.cpp
src/test/: bufferTest.cpp
